# news-noise-filter

./: .gitignore  LICENSE  README.md  config.example.yaml  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
noise_filter/: __init__.py  dedup.py  llm_judge.py  pipeline.py  rules.py
sample_data/: headlines.json
tests/: test_pipeline.py
