[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "news-noise-filter"
version = "0.1.0"
description = "A three-stage (regex -> dedup -> LLM judge) filter that turns a raw news-headline firehose into the few worth reading."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only needed to enable the stage-3 LLM judge; the pipeline fails open without it.
llm = ["anthropic>=0.40"]
test = ["pytest"]

[tool.setuptools]
packages = ["noise_filter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 저장소 루트를 import 경로에 넣는다. 이게 없으면 `python -m pytest`(cwd 를 sys.path 에
# 넣어줌)로는 통과하지만, 맨 `pytest`(CI 가 쓰는 방식)에서는 noise_filter 를 못 찾는다.
pythonpath = ["."]
